Get usage report by id endpoint
