# openapi/spec.yaml
@@ -261,9 +261,7 @@ components:
         - id
         - from
         - to
-        - report_completed_at
         - state
-        - products
       properties:
         id:
           type: string
@@ -275,17 +273,14 @@ components:
           type: integer
           format: int64
         report_completed_at:
-          type: string
+          type: integer
+          format: int64
         state:
           type: string
         products:
-          $ref: "#/components/schemas/Product"
-    Product:
-      required:
-        - product_name
-      properties:
-        product_name:
-          type: string
+          type: object
+          additionalProperties:
+            type: integer
   responses:
     ApplicationStateResponse:
       description: Successful healthcheck or liveness response
